<resources>
    <string name="app_name">Werewolf</string>
    <string name="title_menu">Werewolves of Miller\'s Hollow</string>
    <string name="Actor">Actor</string>
    <string name="Angel">Angel</string>
    <string name="BearTamer">Bear Tamer</string>
    <string name="BigBadWolf">Big Bad Wolf</string>
    <string name="Brother">Brother</string>
    <string name="Crow">Crow</string>
    <string name="Cupid">Cupid</string>
    <string name="Defender">Defender</string>
    <string name="Elder">Elder</string>
    <string name="Fireman">Arsonist</string>
    <string name="Fox">Fox</string>
    <string name="Gypsy">Gypsy</string>
    <string name="Hunter">Hunter</string>
    <string name="Idiot">Idiot of the Village</string>
    <string name="LittleGirl">Little Girl</string>
    <string name="Manipulator">Manipulator</string>
    <string name="Piper">Flute Player</string>
    <string name="RustyKnight">Rusty Knight</string>
    <string name="Scapegoat">Scapegoat</string>
    <string name="Seer">Seer</string>
    <string name="Servant">Devoted Servant</string>
    <string name="Sister">Sister</string>
    <string name="StutteringJudge">Stuttering Judge</string>
    <string name="Thief">Thief</string>
    <string name="Villager">Villager</string>
    <string name="VillagerVillager">Villager-Villager</string>
    <string name="Werewolf">Werewolf</string>
    <string name="WhiteWerewolf">White Werewolf</string>
    <string name="WildChild">Wild Child</string>
    <string name="Witch">Witch</string>
    <string name="WolfFather">Wolf Father</string>
    <string name="WolfHound">Wolf Hound</string>
    <string name="Phase_SLEEPING">Sleeping</string>
    <string name="Phase_NIGHT">Night</string>
    <string name="Phase_DAWN">Dawn</string>
    <string name="Phase_DAY">Day</string>
    <string name="Phase_SUNSET">Sunset</string>
    <string name="Power_PERMANENT">Permanent</string>
    <string name="Power_CONSUMABLE">Consumable</string>
    <string name="Power_CONDITIONAL">Conditional</string>
    <string name="Power_UNIQUE">Unique</string>
    <string name="Condition_NOCONDITION">No condition</string>
    <string name="Condition_ONEWEREWOLF">One Werewolf</string>
    <string name="Condition_ONEVILLAGER">One Villager</string>
    <string name="Condition_ALLWEREWOLVES">All Werewolves</string>
    <string name="Condition_ALLVILLAGERS">All Villagers</string>
    <string name="Condition_LINKEDROLES">Linked Roles</string>
    <string name="Condition_ISALONE">Is solitary</string>
    <string name="Generic_Yes">Yes</string>
    <string name="Generic_No">No</string>
    <string name="Generic_Cancel">Cancel</string>
    <string name="Generic_Back">Back</string>
    <string name="Generic_Okay">OK</string>
    <string name="Generic_NotFoundedString">String not found!</string>
    <string name="MenuButton_StartGame">Start</string>
    <string name="MenuButton_Role">Roles</string>
    <string name="MenuButton_FAQ">F.A.Q.</string>
    <string name="MenuButton_Exit">Exit</string>
    <string name="SelectButton_StartGame">Begin</string>
    <string name="SelectButton_Previous">&lt;</string>
    <string name="SelectButton_Next">&gt;</string>
    <string name="SelectButton_Cancel">C</string>
    <string name="SelectButton_Delete">X</string>
    <string name="GameButton_Roles">Roles</string>
    <string name="GameButton_NextTurn">Next turn</string>
    <string name="GameButton_Information">Info</string>
    <string name="GameButton_EndGame">End the game</string>
    <string name="MainView_Language">Language</string>
    <string name="RoleView_DialogTitle">Elder power</string>
    <string name="RoleView_DialogDescription">Do you wish to remove the powers of all the villagers not solo?</string>
    <string name="RoleView_AncientButton">Elder</string>
    <string name="InformationView_title">Description</string>
    <string name="InformationView_death">Deaths</string>
    <string name="InformationView_deathEdit">Enter the deaths</string>
    <string name="InformationView_lover">Lovers</string>
    <string name="InformationView_loverEdit">Enter the lovers</string>
    <string name="InformationView_defender">Defender</string>
    <string name="InformationView_defenderEdit">Enter the protected</string>
    <string name="InformationView_wildChild">Wild Child</string>
    <string name="InformationView_wildChildEdit">Enter the mentor</string>
    <string name="InformationView_bearTamer">Bear</string>
    <string name="InformationView_bearTamerEdit">Enter the tamer</string>
    <string name="InformationView_ancient">Ancient</string>
    <string name="InformationView_ancientEdit">Enter the ancient</string>
    <string name="InformationView_infected">Infected</string>
    <string name="InformationView_infectedEdit">Enter the infected</string>
    <string name="InformationView_sectarian">Sectarian</string>
    <string name="InformationView_sectarianEdit">Enter the designated players</string>
    <string name="InformationView_comedian">Comedian</string>
    <string name="InformationView_comedianEdit">Enter the copied role</string>
    <string name="InformationView_thief">Thief</string>
    <string name="InformationView_thiefEdit">Enter the trapped player</string>
    <string name="InformationView_piper">Piper</string>
    <string name="InformationView_piperEdit">Enter the bewitched</string>
    <string name="InformationView_scapegoat">Scapegoat</string>
    <string name="InformationView_scapegoatEdit">Enter the allowed voters</string>
    <string name="InformationView_switched">Seat changes</string>
    <string name="InformationView_switchedEdit">Enter the players who switched seats</string>
    <string name="InformationView_punished">Punished</string>
    <string name="InformationView_punishedEdit">Enter the punished</string>
    <string name="SelectView_NumberOfCharacters">Number of characters selected : %1$d</string>
    <string name="SelectView_selectionTitle">Select an item</string>
    <string name="SelectView_selectionMessage">Selected version of %s : %s</string>
    <string name="SelectView_clearButton">Clear</string>
    <string name="SelectView_clearDialogTitle">Clear the list</string>
    <string name="SelectView_clearDialogMessage">You\'re about to clear the list of selected characters for your game. Are you sure you want to do this ?</string>
    <string name="GameView_StartGame">Start the game</string>
    <string name="GameView_BadInit">No game</string>
    <string name="GameView_GameOver">Game over</string>
    <string name="GameView_Header">Phase %1$s, turn %2$d</string>
    <string name="GameView_phaseSleeping">The night has come, the village goes to sleep!</string>
    <string name="GameView_phaseDawn">Morning, proceed with the eliminations!</string>
    <string name="GameView_phaseDay">Day time! Chat and speak about what to do!</string>
    <string name="GameView_phaseEvening">Dinner is served! But watch out, these villagers are alive, so are their enemies…</string>
    <string name="GameView_numberCharacters">Number of characters in game : %1$d</string>
    <string name="DescriptionView_CreationButton">Create</string>
    <string name="DescriptionView_EditionButton">Edit</string>
    <string name="DescriptionView_DeletionButton">Delete</string>
    <string name="DescriptionView_ResetButton">Reset</string>
    <string name="DescriptionView_statDescriptionSoloYes">Solitary : Yes,</string>
    <string name="DescriptionView_statDescriptionSoloNo">Solitary : No,</string>
    <string name="DescriptionView_statDescriptionWakeUpYes">Wakes up at night : Yes,</string>
    <string name="DescriptionView_statDescriptionWakeUpNo">Wakes up at night : No,</string>
    <string name="DescriptionView_statDescriptionPower">Power : %s</string>
    <string name="DescriptionView_statDescriptionCondition">Condition : %s</string>
    <string name="DescriptionView_DeleteQuestion">Do you wish to delete this role?</string>
    <string name="DescriptionView_ResetQuestion">Do you wish to reset all the roles and delete the ones you created?</string>
    <string name="DescriptionView_DialogTitle">Description</string>
    <string name="CreationView_Picture">Picture</string>
    <string name="CreationView_SoloSpinner">Solitary</string>
    <string name="CreationView_SoloText">Determines if the role is solitary. Solitary roles do not belong to any team, and must fulfill their own objectives to win by themselves. Roles that are not solitary can influence the behavior of the app, like the Ancient which removes the powers of all special villagers on death.</string>
    <string name="CreationView_NocturneSpinner">Nocturnal</string>
    <string name="CreationView_NocturneText">Determines if the role wakes up at night.</string>
    <string name="CreationView_WerewolfSpinner">Werewolf</string>
    <string name="CreationView_WerewolfText">Determines if the role is considered as a Werewolf.</string>
    <string name="CreationView_Mode">Mode</string>
    <string name="CreationView_HintMode">Enter your title mode</string>
    <string name="CreationView_ModeText">Enter the role\'s identifier key. The \"NORMAL\" and \"AUTHOR\" keys are reserved and cannot be used.</string>
    <string name="CreationView_PowerSpinner">Power</string>
    <string name="CreationView_PowerText">Specifies the category of the power used by the role : \nPERMANENT : The power is always active. Use this option when the role has no power.\nCONSUMABLE : The power can be consumed at any time during the game. You will be able to change the \"Wakes up at night\" option in the roles view to deactivate the role. If the role is supposed to wake up at night in later turns, change the configuration setting accordingly.\nCONDITIONAL : The power can be activated based on a condition set up in the following dropdowns.\nUNIQUE : The power is usable one time, the role will not be woken up at night afterwards. Usable only on roles that wake up at night.</string>
    <string name="CreationView_ConditionSpinner">Condition</string>
    <string name="CreationView_ConditionText">You must choose the \"CONDITIONAL\" power to edit this parameter. Specifies the role\'s wake up conditions : \nNOCONDITION : The default value, used for powers that are always active. \nONEWEREWOLF : The player wakes up when at least one Werewolf is dead. \nONEVILLAGER : The player wakes up when at least one simple Villager is dead. \nALLWEREWOLVES : The player wakes up when all Werewolves are dead. \nALLVILLAGERS : The player wakes up when all simple Villagers are dead. \nLINKEDROLES : The player wakes up when all the specified roles are dead. \nISALONE : The player wakes up when they\'re the last one in play with this role. Works only with roles that can have multiple occurrences.</string>
    <string name="CreationView_Linked">Linked roles</string>
    <string name="CreationView_LinkedText">Select the roles to link. Each link is named based on a combination of the target role\'s name and version. The player will wake up at the same time as the roles it has been linked with. If you need to create a new Werewolf that has a second turn, use the \"Werewolf\" option instead.</string>
    <string name="CreationView_LinkedButton">Link</string>
    <string name="CreationView_Action">Action</string>
    <string name="CreationView_ActionHint">Night action</string>
    <string name="CreationView_ActionText">Specify the text that will appear when the role is woken up at night. This text is never shown if the role does not wake up at night.</string>
    <string name="CreationView_Description">Description</string>
    <string name="CreationView_DescriptionHint">Description of your role</string>
    <string name="CreationView_DescriptionText">Specify the actions performed by the role.</string>
    <string name="CreationView_ValidButton">Create</string>
    <string name="CreationView_Title">Role Creation</string>
    <string name="FaqView_title">F.A.Q.</string>
</resources>