<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    android:background="#343434">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="40sp"
        android:text="@string/InformationView_title"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="500dp">
        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alignmentMode="alignBounds"
            android:useDefaultMargins="true"
            android:columnCount="2">

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_death"
                    />

                <EditText
                    android:id="@+id/deathEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_deathEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_lover"
                    />

                <EditText
                    android:id="@+id/loverEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_loverEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_defender"
                    />

                <EditText
                    android:id="@+id/defenderEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_defenderEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_wildChild"
                    />

                <EditText
                    android:id="@+id/wildEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_wildChildEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_bearTamer"
                    />

                <EditText
                    android:id="@+id/bearEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_bearTamerEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_ancient"
                    />

                <EditText
                    android:id="@+id/ancientEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_ancientEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_infected"
                    />

                <EditText
                    android:id="@+id/infectedEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_infectedEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_sectarian"
                    />

                <EditText
                    android:id="@+id/sectarianEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_sectarianEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_comedian"
                    />

                <EditText
                    android:id="@+id/comedianEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_comedianEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_thief"
                    />

                <EditText
                    android:id="@+id/thiefEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_thiefEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_piper"
                    />

                <EditText
                    android:id="@+id/piperEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_piperEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_scapegoat"
                    />

                <EditText
                    android:id="@+id/scapegoatEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_scapegoatEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_switched"
                    />

                <EditText
                    android:id="@+id/switchEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_switchedEdit"/>
            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_columnWeight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="start"
                    android:textColor="@color/white"
                    android:text="@string/InformationView_punished"
                    />

                <EditText
                    android:id="@+id/punishedEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:background="@color/white"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:scrollHorizontally="true"
                    android:hint="@string/InformationView_punishedEdit"/>
            </LinearLayout>

        </GridLayout>

    </ScrollView>

    <Button
        android:id="@+id/returnButton"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:text="@string/Generic_Back"/>

</LinearLayout>